[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4", features = ["spin_no_std"] }
log = "0.4"
riscv = "0.11"
bitflags = "2.5"
buddy_system_allocator = "0.9"
xmas-elf = "0.9"
